--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <li><a href="order.html">Заказать</a></li><br><br>
           <li><a href="about.html">О нас</a></li>
         </ul>
-        <a class="logo" href="main.html"><img src="img/logo.png" class="logo_png">
+        <a class="logo" href="index.html"><img src="img/logo.png" class="logo_png">
         </a>
         <a> </a>
       </nav>
